src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-ofT-dhF500-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault window height: F500\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 0 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 500, bounds: 1280 × 720, states: []
size: 1 × 500, bounds: 1280 × 720, states: [Activated]
